Fixed wrapping for the key indicator

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -668,6 +668,7 @@ button.nav-link.active {
 
 .key-indicator {
     height: 16px;
+    width: 8.61px;
 }
 
 .check-name {
